<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>tv.hd3g</groupId>
	<artifactId>divergentframework-taskjob</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
  
	<name>Divergent Framework Taskjob</name>
    <url>https://github.com/hdsdi3g/Divergent-Framework-Taskjob</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>10</maven.compiler.source>
		<maven.compiler.target>10</maven.compiler.target>
	    <maven.javadoc.skip>true</maven.javadoc.skip>
	</properties>

  <dependencies>
	<dependency>
		<groupId>com.google.code.gson</groupId>
		<artifactId>gson</artifactId>
		<version>2.8.5</version>
	</dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
	<dependency>
		<groupId>log4j</groupId>
		<artifactId>log4j</artifactId>
		<version>1.2.17</version>
	</dependency>
  </dependencies>

  <organization>
  	<name>hd3g.tv</name>
  	<url>https://hd3g.tv</url>
  </organization>
  <scm>
		<connection>scm:git:https://github.com/hdsdi3g/Divergent-Framework-Taskjob.git</connection>
		<developerConnection>scm:git:https://github.com/hdsdi3g/Divergent-Framework-Taskjob.git</developerConnection>
		<url>https://github.com/hdsdi3g</url>
		<tag>HEAD</tag>
  </scm>
  <issueManagement>
  	<url>https://github.com/hdsdi3g/Divergent-Framework-Taskjob/issues</url>
  	<system>GitHub</system>
  </issueManagement>
  
	<licenses>
	  <license>
	    <name>GNU Lesser General Public License, Version 3</name>
	    <url>https://www.gnu.org/licenses/lgpl.txt</url>
	    <distribution>repo</distribution>
	  </license>
	</licenses>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
			</plugin>		
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
			</plugin>		
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
			</plugin>
		</plugins>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh</artifactId>
				<version>2.8</version>
			</extension>
		</extensions>
	</build>
</project>
